--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,21 @@
 {
     "dependencies": {
-        "express": "^4.21.2"
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.0",
+        "mysql2": "^3.13.0",
+        "sequelize": "^6.37.6",
+        "winston": "^3.17.0"
     },
     "scripts": {
-        "start": "nodemon index.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.9"
     }
 }
