--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.2",
         "mysql2": "^3.13.0",
         "sequelize": "^6.37.6",
         "winston": "^3.17.0"
