--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.2",
         "mysql2": "^3.13.0",
+        "openai": "^4.93.0",
         "sequelize": "^6.37.6",
         "winston": "^3.17.0"
     },
